--- a/webapp/docker-compose.yaml
+++ b/webapp/docker-compose.yaml
@@ -5,6 +5,7 @@ services:
     volumes:
       - ./mysql/data:/var/lib/mysql
       - ./mysql/db:/docker-entrypoint-initdb.d
+      - ./mysql/files:/var/lib/mysql-files
       - ./logs/mysql:/var/log/mysql
       - ../provisioning/ansible/roles/web/files/my.cnf:/etc/mysql/conf.d/my.cnf
       - ../provisioning/ansible/roles/web/files/slow-mysqld.cnf:/etc/mysql/conf.d/slowquery.cnf
