fixtureはinitial-dataにて生成する

--- a/initial-data/Makefile
+++ b/initial-data/Makefile
@@ -9,10 +9,12 @@ refresh_estate_data:
 chair_data: make_chair_data.py
 	python3 make_chair_data.py
 	cp result/2_DummyChairData.sql ../webapp/mysql/db/2_DummyChairData.sql
+	cp result/chair_condition.json ../webapp/fixture/chair_condition.json
 
 estate_data: make_estate_data.py
 	python3 make_estate_data.py
 	cp result/1_DummyEstateData.sql ../webapp/mysql/db/1_DummyEstateData.sql
+	cp result/estate_condition.json ../webapp/fixture/estate_condition.json
 
 verification_data: ./make_verification_data
 	rm -rf ./result/verification_data
