--- a/provisioning/ansible/roles/web/tasks/main.yaml
+++ b/provisioning/ansible/roles/web/tasks/main.yaml
@@ -192,3 +192,9 @@
     name: "nginx"
     state: "reloaded"
     enabled: "yes"
+
+- name: Initialize isucon10
+  become: yes
+  become_user: isucon
+  command: curl -X POST http://localhost/initialize
+
