fix: benchmarkのテスト走行を除去

--- a/provisioning/ansible/roles/bench/tasks/main.yaml
+++ b/provisioning/ansible/roles/bench/tasks/main.yaml
@@ -22,7 +22,7 @@
   environment:
     PATH: "/home/isucon/bin:/home/isucon/.local/bin:/usr/local/node/bin:/usr/local/python/bin:/usr/local/go/bin:/home/isucon/go/bin:/usr/local/bin:/usr/bin:/bin"
   shell: |
-    make && ./bench -data-dir ../initial-data -target-url "http://localhost"
+    make
 
 - name: Disable Unused Services
   become: yes
