--- a/webapp/nodejs/package.json
+++ b/webapp/nodejs/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "DEBUG=express:* node app.js"
   },
   "repository": {
     "type": "git",
