--- a/webapp/nodejs/package.json
+++ b/webapp/nodejs/package.json
@@ -23,6 +23,7 @@
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1"
   }
 }
