--- a/webapp/nodejs/package.json
+++ b/webapp/nodejs/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/isucon/isucon10-qualify#readme",
   "dependencies": {
     "camelcase-keys": "^6.2.2",
+    "csv-parse": "^4.12.0",
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
