feat: impl csv upload for deno

--- a/webapp/deno/Makefile
+++ b/webapp/deno/Makefile
@@ -4,7 +4,7 @@ isuumo:
 	deno bundle app.ts > isuumo
 
 run:
-	deno run --allow-net --allow-run --allow-read --allow-env ./isuumo
+	deno run --allow-net --allow-run --allow-read --allow-env --allow-write --unstable ./isuumo
 
 rundev:
-	deno run --allow-net --allow-run --allow-read --allow-env ./app.ts
+	deno run --allow-net --allow-run --allow-read --allow-env --allow-write --unstable ./app.ts
