--- a/webapp/docker-compose.yaml
+++ b/webapp/docker-compose.yaml
@@ -119,6 +119,11 @@ services:
       > /etc/nginx/nginx.conf
       && nginx -g 'daemon off;'"
 
+  php:
+    build: ./php
+    volumes:
+      - ./fixture:/fixture
+
   benchmarker:
     build: ../bench
     volumes:
