--- a/webapp/php/Dockerfile
+++ b/webapp/php/Dockerfile
@@ -9,9 +9,13 @@ RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" &&
 
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
+      libzip-dev \
       make \
       && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
+
+RUN docker-php-ext-configure zip && \
+    docker-php-ext-install zip
 
 COPY . /php
