--- a/webapp/php/Makefile
+++ b/webapp/php/Makefile
@@ -1,4 +1,6 @@
-.PHONY: help install dependencies clean
+.PHONY: help install dependencies run clean
+
+PORT := 1323
 
 help:
 	@cat $(firstword $(MAKEFILE_LIST))
@@ -13,6 +15,9 @@ build: \
 dependencies:
 	type php > /dev/null
 	type composer > /dev/null
+
+run:
+	php -S localhost:$(PORT) -t public public/index.php
 
 vendor:
 	composer install
