--- a/webapp/php/docker-compose.override.yml
+++ b/webapp/php/docker-compose.override.yml
@@ -2,6 +2,7 @@ version: "3"
 services:
   api-server:
     build: ./php
+    entrypoint: make run
     volumes:
       - ./fixture:/fixture
       - ./php:/php
