[webapp/rust] Refactoring

--- a/webapp/rust/Dockerfile
+++ b/webapp/rust/Dockerfile
@@ -9,3 +9,4 @@ RUN mkdir src && echo 'fn main() {}' > src/main.rs && cargo build --locked --rel
 COPY src ./src
 RUN touch src/main.rs && cargo build --locked --frozen --release
 ENV RUST_LOG=info
+CMD ["/usr/src/isuumo/target/release/isuumo"]
