--- a/provisioning/ansible/Vagrantfile
+++ b/provisioning/ansible/Vagrantfile
@@ -55,8 +55,8 @@ Vagrant.configure("2") do |config|
      vb.gui = true
   
      # Customize the amount of memory on the VM:
-     vb.cpus = 2
-     vb.memory = "2048"
+     vb.cpus = 4
+     vb.memory = "4096"
    end
   #
   # View the documentation for the provider you are using for more
@@ -71,7 +71,7 @@ Vagrant.configure("2") do |config|
    SHELL
     config.vm.network "private_network", ip: "192.168.33.10"
     config.vm.provision "ansible" do |ansible|
-      ansible.playbook = "benchmarker.yaml"
+      ansible.playbook = "competitor.yaml"
       ansible.inventory_path = "hosts.yaml"
       ansible.limit = 'all'
       ansible.verbose = "v"
