--- a/provisioning/tune/roles/db/files/mysqld.cnf
+++ b/provisioning/tune/roles/db/files/mysqld.cnf
@@ -104,3 +104,9 @@ max_binlog_size   = 100M
 # ssl-cert=/etc/mysql/server-cert.pem
 # ssl-key=/etc/mysql/server-key.pem
 max_allowed_packet = 32505856
+
+innodb_log_file_size = 256M
+innodb_buffer_pool_size = 2048M
+sort_buffer_size = 2M
+read_buffer_size = 2M
+query_cache_type = 1
