--- a/webapp/python/Dockerfile
+++ b/webapp/python/Dockerfile
@@ -4,6 +4,8 @@ EXPOSE 1323
 
 WORKDIR /python
 
+RUN apt-get update && apt-get install -y wget default-mysql-client
+
 ENV DOCKERIZE_VERSION v0.6.1
 RUN wget -q https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
     && tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
