--- a/webapp/rust/Cargo.toml
+++ b/webapp/rust/Cargo.toml
@@ -15,7 +15,9 @@ env_logger = "0.7"
 futures = "0.3"
 listenfd = "0.3"
 log = "0.4"
-mysql_async = "0.24"
+mysql = "18.2"
+r2d2 = "0.8"
+r2d2_mysql = "18.0"
 serde = "1.0"
 serde_json = "1.0"
 tokio = { version = "0.2", features = ["process"] }
