--- a/provisioning/ansible/roles/bench/tasks/main.yaml
+++ b/provisioning/ansible/roles/bench/tasks/main.yaml
@@ -80,7 +80,7 @@
   become_user: isucon
   command: mv /tmp/isucon10-portal /home/isucon/portal
 
-- name: Make Superviser
+- name: Make Supervisor
   become: yes
   become_user: isucon
   args:
@@ -89,4 +89,25 @@
     PATH: "/home/isucon/local/go/bin:/home/isucon/local/node/bin:/home/isucon/local/ruby/bin:/home/isucon/local/python/bin:/home/isucon/local/perl/bin:/home/isucon/local/php/bin:/home/isucon/.cargo/bin:/home/isucon/.deno/bin:/home/isucon/bin:/home/isucon/.local/bin:/usr/bin:/sbin:/bin"
   shell: |
     cargo build --release
-# - name: Deploy SericeFile
+- name: Copy env.sh for supervisor
+  become: yes
+  become_user: isucon
+  copy:
+    src: "env.sh"
+    dest: /home/isucon/portal
+
+- name: Copy service file
+  copy:
+    src: "{{ item }}"
+    dest: "/etc/systemd/system"
+    owner: "root"
+    group: "root"
+    mode: "0644"
+  with_items:
+    - isucon-supervisor.service
+- name: Start "supevisor"
+  systemd:
+    daemon_reload: "yes"
+    name: "isucon-supervisor"
+    state: "restarted"
+    enabled: "yes"
