--- a/provisioning/ansible/roles/web/tasks/main.yaml
+++ b/provisioning/ansible/roles/web/tasks/main.yaml
@@ -9,7 +9,7 @@
   become: yes
   become_user: root
   file:
-    path: /home/isucon/isucon10-qualify
+    path: /home/isucon/isuumo
     state: absent
   when: chk_file.stat.exists
 
@@ -186,6 +186,16 @@
 #   shell: |
 #     bundle install
 
+- name: Build Web Application deno
+  become: yes
+  become_user: isucon
+  args:
+    chdir: /home/isucon/isuumo/webapp/deno
+  environment:
+    <<: *env
+  shell: |
+    make isuumo
+
 - name: Copy service file
   copy:
     src: "{{ item }}"
@@ -196,6 +206,7 @@
   with_items:
     - isucon-go.service
     - isucon-nodejs.service
+    - isucon-deno.service
 
 
 - name: Install frontend packages
