--- a/provisioning/ansible/roles/web-perl/tasks/main.yaml
+++ b/provisioning/ansible/roles/web-perl/tasks/main.yaml
@@ -5,10 +5,22 @@
     dest: /home/isucon/local/perl/bin/cpm
     mode: '0755'
 
+- name: Chgroup perl dir
+  become: yes
+  become_user: root
+  file:
+    path: /home/isucon/local/perl
+    state: directory
+    owner: isucon
+    group: isucon
+    recurse: yes
+
 - name: Install isuumo.perl Pacakges
   become: yes
   become_user: isucon
+  environment:
+    PATH: "/home/isucon/local/go/bin:/home/isucon/local/node/bin:/home/isucon/local/ruby/bin:/home/isucon/local/python/bin:/home/isucon/local/perl/bin:/home/isucon/local/php/bin:/home/isucon/.cargo/bin:/home/isucon/.deno/bin:/home/isucon/bin:/home/isucon/.local/bin:/usr/bin:/sbin:/bin"
   args:
     chdir: /home/isucon/isuumo/webapp/perl
   shell: |
-    cpm install -g --show-build-log-on-failure
+    /home/isucon/local/perl/bin/cpm install -g --show-build-log-on-failure
