--- a/provisioning/ansible/roles/web-ruby/files/isucon-ruby.service
+++ b/provisioning/ansible/roles/web-ruby/files/isucon-ruby.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=isucon-rust
+Description=isucon-ruby
 After=syslog.target
 
 [Service]
@@ -12,5 +12,7 @@ Group=isucon
 ExecStart=/home/isucon/local/ruby/bin/bundle exec unicorn -c unicorn.conf.rb
 ExecStop=/bin/kill -s QUIT $MAINPID
 
+Restart   = always
+Type      = simple
 [Install]
 WantedBy=multi-user.target
