--- a/webapp/docker-compose.yaml
+++ b/webapp/docker-compose.yaml
@@ -52,9 +52,9 @@ services:
       - ./mysql/db:/mysql/db
       - ./fixture:/fixture
     environment:
-      MYSQL_DATABASE: isuumo
+      MYSQL_DBNAME: isuumo
       MYSQL_USER: isucon
-      MYSQL_PASSWORD: isucon
+      MYSQL_PASS: isucon
       MYSQL_HOST: mysql
       SERVER_PORT: 1323
     ports:
