docker-composeのセットアップ

--- a/webapp/python/Dockerfile
+++ b/webapp/python/Dockerfile
@@ -11,6 +11,7 @@ RUN wget -q https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VE
     && tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
     && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
 
-COPY . .
-
+COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
+
+COPY . .
