--- a/provisioning/ansible/roles/web-perl/files/isuumo.perl.service
+++ b/provisioning/ansible/roles/web-perl/files/isuumo.perl.service
@@ -7,7 +7,7 @@ EnvironmentFile=/home/isucon/env.sh
 
 User=isucon
 Group=isucon
-ExecStart=/home/isucon/local/perl/bin/carton exec plackup -s Starlet -p 1323  app.psgi
+ExecStart=/home/isucon/local/perl/bin/plackup -s Starlet -p 1323  app.psgi
 
 Restart   = always
 Type      = simple
