--- a/provisioning/ansible/roles/web-ruby/tasks/main.yaml
+++ b/provisioning/ansible/roles/web-ruby/tasks/main.yaml
@@ -3,8 +3,8 @@
   become_user: isucon
   args:
     chdir: /home/isucon/isuumo/webapp/ruby
- environment:
-    <<: *env
+  environment:
+    PATH: "/home/isucon/local/go/bin:/home/isucon/local/node/bin:/home/isucon/local/ruby/bin:/home/isucon/local/python/bin:/home/isucon/local/perl/bin:/home/isucon/local/php/bin:/home/isucon/.cargo/bin:/home/isucon/.deno/bin:/home/isucon/bin:/home/isucon/.local/bin:/usr/bin:/sbin:/bin"
   shell: |
     bundle config set deployment true && \
     bundle config set path /gems && \
