--- a/provisioning/ansible/roles/bench/files/isucon-supervisor.service
+++ b/provisioning/ansible/roles/bench/files/isucon-supervisor.service
@@ -10,7 +10,7 @@ PIDFile=/home/isucon/portal/supervisor/server-supervisor.pid
 User=isucon
 Group=isucon
 ExecStartPre=/bin/sh -c "sudo /bin/systemctl set-environment ISUXPORTAL_SUPERVISOR_TEAM_ID=$(cat /home/isucon/team_id)"
-ExecStart=/home/isucon/portal/supervisor/target/release/isuxportal-supervisor --data-dir /home/isucon/isuumo/initial-data --fixture-dir /home/isucon/isuumo/webapp/fixture
+ExecStart=/home/isucon/portal/supervisor/target/release/isuxportal-supervisor /home/isucon/isuumo/bench/bench --data-dir /home/isucon/isuumo/initial-data --fixture-dir /home/isucon/isuumo/webapp/fixture
 ExecStop=/bin/kill -s QUIT $MAINPID
 
 [Install]
