--- a/webapp/docker-compose.yaml
+++ b/webapp/docker-compose.yaml
@@ -14,8 +14,8 @@ services:
       MYSQL_DATABASE: isuumo
       MYSQL_USER: isucon
       MYSQL_PASSWORD: isucon
-    # ports:
-    #   - "3306:3306"
+    ports:
+      - "3306:3306"
 
   nodejs:
     build: ./nodejs
@@ -34,8 +34,8 @@ services:
       MYSQL_PASSWORD: isucon
       MYSQL_HOST: mysql
       SERVER_PORT: 1323
-    # ports:
-    #   - "1323:1323"
+    ports:
+      - "1323:1323"
     depends_on:
       - mysql
     command: npm start
@@ -58,8 +58,8 @@ services:
       MYSQL_PASSWORD: isucon
       MYSQL_HOST: mysql
       SERVER_PORT: 1323
-    # ports:
-    #   - "1323:1323"
+    ports:
+      - "1323:1323"
     depends_on:
       - mysql
     command: make run
@@ -81,8 +81,8 @@ services:
       MYSQL_PASSWORD: isucon
       MYSQL_HOST: mysql
       SERVER_PORT: 1323
-    # ports:
-    #   - "1323:1323"
+    ports:
+      - "1323:1323"
     depends_on:
       - mysql
     command: /go/src/isuumo/isuumo
