--- a/webapp/docker-compose.yaml
+++ b/webapp/docker-compose.yaml
@@ -64,6 +64,23 @@ services:
       - mysql
     command: make run
 
+  php:
+    build: ./php
+    command: -c "make run"
+    entrypoint: bash
+    environment:
+      MYSQL_DATABASE: isuumo
+      MYSQL_USER: isucon
+      MYSQL_PASSWORD: isucon
+      MYSQL_HOST: mysql
+      SERVER_PORT: 1323
+    ports:
+      - 1323:1323
+    volumes:
+      - ./fixture:/fixture
+      - ./php:/php
+      - ./mysql:/mysql
+
   api-server:
     build: ./go
     entrypoint:
