--- a/provisioning/ansible/roles/web-bootstrap/tasks/main.yaml
+++ b/provisioning/ansible/roles/web-bootstrap/tasks/main.yaml
@@ -17,7 +17,7 @@
   become: no
   git:
     repo: git@github.com:isucon/isucon10-qualify.git
-    version: master
+    version: provisioning/ansible/separate-role
     dest: /tmp/isucon10-qualify
     accept_hostkey: yes
 
@@ -188,3 +188,4 @@
   copy:
     src: "env.sh"
     dest: /home/isucon
+
