--- a/provisioning/ansible/roles/web-rust/tasks/main.yaml
+++ b/provisioning/ansible/roles/web-rust/tasks/main.yaml
@@ -7,7 +7,7 @@
   environment:
     PATH: "/home/isucon/local/go/bin:/home/isucon/local/node/bin:/home/isucon/local/ruby/bin:/home/isucon/local/python/bin:/home/isucon/local/perl/bin:/home/isucon/local/php/bin:/home/isucon/.cargo/bin:/home/isucon/.deno/bin:/home/isucon/bin:/home/isucon/.local/bin:/usr/bin:/sbin:/bin"
   shell: |
-    make run
+    make build
 
 - name: Copy Service file
   copy:
