fix: 最初は起動しない

--- a/provisioning/ansible/roles/bench/tasks/main.yaml
+++ b/provisioning/ansible/roles/bench/tasks/main.yaml
@@ -108,5 +108,5 @@
   systemd:
     daemon_reload: "yes"
     name: "isuumo.supervisor"
-    state: "restarted"
+    state: "stopped"
     enabled: "yes"
