--- a/provisioning/ansible/benchmarker.yaml
+++ b/provisioning/ansible/benchmarker.yaml
@@ -4,5 +4,7 @@
   roles:
     - role: common
     - role: langs
+    - role: web-bootstrap
+    - role: web-go
     - role: web-prepare
     - role: bench
