--- a/provisioning/ansible/Vagrantfile
+++ b/provisioning/ansible/Vagrantfile
@@ -71,8 +71,8 @@ Vagrant.configure("2") do |config|
    SHELL
     config.vm.network "private_network", ip: "192.168.33.10"
     config.vm.provision "ansible" do |ansible|
-      ansible.playbook = "benchmarker.yaml"
-      ansible.inventory_path = "hosts.yaml"
+      ansible.playbook = "allinone.yaml"
+      ansible.inventory_path = "inventory/hosts"
       ansible.limit = 'all'
       ansible.verbose = "v"
       # ansible.raw_arguments = "--vault-password-file=.vault_password"
