--- a/webapp/php/Dockerfile
+++ b/webapp/php/Dockerfile
@@ -20,4 +20,9 @@ RUN docker-php-ext-configure zip && \
     docker-php-ext-install zip && \
     docker-php-ext-install pdo_mysql
 
+ENV DOCKERIZE_VERSION v0.6.1
+RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
+    && tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
+    && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
+
 COPY . /php
