--- a/webapp/rust/Dockerfile
+++ b/webapp/rust/Dockerfile
@@ -13,3 +13,7 @@ COPY Cargo.toml Cargo.lock ./
 RUN mkdir src && echo 'fn main() {}' > src/main.rs && cargo build --locked --release
 COPY src ./src
 RUN touch src/main.rs && cargo build --locked --frozen --release
+
+RUN apt-get update && apt-get install -y wget default-mysql-client
+
+CMD ["/usr/src/isuumo/target/release/isuumo"]
