--- a/provisioning/ansible/competitor.yaml
+++ b/provisioning/ansible/competitor.yaml
@@ -6,12 +6,12 @@
     - role: langs
     - role: web-bootstrap
     - role: web-go
-    - role: web-node
-    - role: web-ruby
-    - role: web-rust
-    - role: web-deno
-    - role: web-php
-    - role: web-perl
-    - role: web-python
+#     - role: web-node
+#     - role: web-ruby
+#     - role: web-rust
+#     - role: web-deno
+#     - role: web-php
+#     - role: web-perl
+#     - role: web-python
     - role: web-prepare
     - role: remove
