ベンチメーク用分離

--- a/provisioning/ansible/competitor.yaml
+++ b/provisioning/ansible/competitor.yaml
@@ -4,7 +4,7 @@
   roles:
     - role: common
     - role: langs
-    - role: web-bootstrap
+    - role: web-bootstrap-my
     - role: web-go
 #     - role: web-node
 #     - role: web-ruby
