--- a/webapp/nodejs/Dockerfile
+++ b/webapp/nodejs/Dockerfile
@@ -1,4 +1,7 @@
 FROM node:latest
 
 WORKDIR /home/isucon/webapp/nodejs
+COPY package.json package.json
+COPY package-lock.json package-lock.json
 
+RUN npm ci
