--- a/webapp/frontend/Dockerfile
+++ b/webapp/frontend/Dockerfile
@@ -8,6 +8,7 @@ COPY package-lock.json package-lock.json
 RUN npm ci
 COPY . .
 
-RUN npm run build
+# RUN npm run build
 
-CMD ["npm", "run", "export"]
+# CMD ["npm", "run", "export"]
+CMD [ "npm", "run", "export" ]
