--- a/webapp/nginx/nginx.conf
+++ b/webapp/nginx/nginx.conf
@@ -36,7 +36,7 @@ http {
     "\tcache:$upstream_http_x_cache"
     "\tvhost:$host";
 
-  access_log  /var/log/nginx/access.log ltsv;
+  access_log  /www/data/access.log ltsv;
 
   sendfile on;
   #tcp_nopush     on;
@@ -47,3 +47,4 @@ http {
 
   include /etc/nginx/conf.d/*.conf;
   include /etc/nginx/sites-enabled/*.conf;
+}
