--- a/webapp/docker-compose/rust.yaml
+++ b/webapp/docker-compose/rust.yaml
@@ -1,7 +1,8 @@
 version: "3"
 services:
   mysql:
-    image: mysql:5.7
+    image: mysql:8.0
+    command: --default-authentication-plugin=mysql_native_password
     volumes:
       - ../mysql/data:/var/lib/mysql
       - ../mysql/db:/docker-entrypoint-initdb.d
