--- a/webapp/docker-compose/go.yaml
+++ b/webapp/docker-compose/go.yaml
@@ -2,6 +2,7 @@ version: "3"
 services:
   mysql:
     image: mysql:5.7
+    platform: linux/x86_64
     volumes:
       - ../mysql/data:/var/lib/mysql
       - ../mysql/db:/docker-entrypoint-initdb.d
