--- a/src/package.json
+++ b/src/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node newrelic app.js"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -25,7 +25,6 @@
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "mysql": "^2.18.1",
-    "newrelic": "^11.10.4"
+    "mysql": "^2.18.1"
   }
 }
