add:uaを特定して503返す

--- a/ansible/roles/nginx.config/files/site-available/isuumo.conf
+++ b/ansible/roles/nginx.config/files/site-available/isuumo.conf
@@ -4,6 +4,43 @@ server {
     listen 80 default_server;
     listen [::]:80 default_server;
 
+    if ($http_user_agent ~* "/ISUCONbot(-Mobile)?/") {
+        return 503;
+    }
+
+    if ($http_user_agent ~* "/Mediapartners-ISUCON/") {
+            return 503;
+    }
+
+    if ($http_user_agent ~* "/ISUCONCoffee/") {
+            return 503;
+    }
+
+    if ($http_user_agent ~* "/ISUCONFeedSeeker(Beta)?/") {
+            return 503;
+    }
+
+    if ($http_user_agent ~* "/crawler \(https:\/\/isucon\.invalid\/(support\/faq\/|help\/jp\/)/") {
+            return 503;
+    }
+
+    if ($http_user_agent ~* "/isubot/") {
+            return 503;
+    }
+
+    if ($http_user_agent ~* "/Isupider/") {
+            return 503;
+    }
+
+    if ($http_user_agent ~* "/Isupider(-image)?\+/") {
+            return 503;
+    }
+
+    if ($http_user_agent ~* "/(bot|crawler|spider)(?:[-_ .\/;@()]|$)/i") {
+            return 503;
+    }
+
+
     location /api {
             proxy_pass http://localhost:1323;
     }
